Fix scrollbar styles #313

--- a/src/assets/css/panel.css
+++ b/src/assets/css/panel.css
@@ -98,6 +98,9 @@
     overflow-y: auto;
     overflow-x: hidden;
     color: $brand-font-color;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .panel-modal-header-title {
